--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "ether-v5-cheat-sheet",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "license": "MIT",
   "dependencies": {
-    "ethers": "5.6.1"
+    "ejs": "^3.1.9",
+    "ethers": "5.6.1",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.3"
   }
 }
